# GR4J

./: .gitignore  README.md  app.R
GR4J_C/: README.md
GR4J_C/data/: example_data.csv  example_sim.csv  gp.txt
GR4J_C/scr/: CMakeLists.txt  Func_GR4J.c  Func_GR4J.h  Func_IO.c  Func_IO.h  Func_Metrics.c  Func_Metrics.h  Func_Para.c  Func_Para.h  Func_Snow.c  Func_Snow.h  Func_UH.c  Func_UH.h  Func_View.c  Func_View.h  def_constants.h  def_structs.h  main.c
documents/: Runoff generation.csv  Simulate & Record.csv  technical_doc.md  结果对比.xlsx
scr/: SCEUA-GR4J.R  app.R
